# beamer-dei-v2

./: .gitignore  Makefile.am  README.md  configure.ac
m4/: ac_autoconf_macro_archive.m4  ac_prog_rubber.m4  acltx_check.m4  acltx_class_beamer.m4  acltx_package_babel.m4  acltx_package_etex.m4  acltx_package_helvet.m4  acltx_package_inputenc.m4
test/: Makefile.am  bibliography.bib  bibliography.tex  colordei-test.tex.in  fontdei-test.tex.in  frames.tex  innerdei-test.tex.in  outerdei-test.tex.in  sectioning.tex  themedei-test.tex.in  title-page.tex
texmf/: Makefile.am
texmf/color/: Makefile.am  beamercolorthemedei-v2.sty
texmf/font/: Makefile.am  beamerfontthemedei-v2.sty
texmf/inner/: Makefile.am  beamerinnerthemedei-v2.sty
texmf/outer/: Makefile.am  beamercolorthemedei-v2.sty  beamerinnerthemedei-v2.sty  beamerouterthemedei-v2.sty
texmf/theme/: Makefile.am  beamerthemedei-v2.sty
